# mav_trajectory_generation_cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: mav_trajectory_generation_cmakeConfig.cmake.in  mav_trajectory_generation_cmakeConfigVersion.cmake.in
mav_trajectory_generation/: CMakeLists.txt
mav_trajectory_generation/include/mav_trajectory_generation/: motion_defines.h  polynomial.h  polynomial_optimization_linear.h  polynomial_optimization_nonlinear.h  rpoly.h  segment.h  timing.h  vertex.h
mav_trajectory_generation/include/mav_trajectory_generation/impl/: polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear_impl.h
mav_trajectory_generation/src/: motion_defines.cpp  timing.cpp
src/: CMakeLists.txt
